parametrizacion ruta edicion

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
-        <div><a href="/"><img src="images/logoavion.png" alt="Logo Digital Travel" class="logo"></a></div>
+        <div><a href="/"><img src="/images/logoavion.png" alt="Logo Digital Travel" class="logo"></a></div>
         <div class="navbar-header">
             <a class="navbar-brand" href="/">Digital Travel</a>
         </div>
