--- a/src/views/products/cart.ejs
+++ b/src/views/products/cart.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <%- include ("../partials/head") %>
-    <title>Mi Carrito - Digital Travel</title>
+        <title>Mi Carrito - Digital Travel</title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
             <form action="/" method="POST" class="formcart">
                 <h2>Detalle de Compra</h2>
                 <article>
-                    <img src="images/radisson.jpg" alt="Radisson New York" class="imagencart">
+                    <img src="/images/radisson.jpg" alt="Radisson New York" class="imagencart">
                     <p>Radisson Hotel New York</p>
                     <p>Habitación: Doble Deluxe</p>
                     <p>IN: 11/09/2021</p>
@@ -23,7 +23,7 @@
                     <p>Precio: USD 529</p>
                 </article>
                 <article>
-                    <img src="images/ar.png" alt="Radisson New York" class="imagencart">
+                    <img src="/images/ar.png" alt="Radisson New York" class="imagencart">
                     <p>AR - Buenos Aires - New York - Buenos Aires</p>
                     <p>IN: 10/09/2021 - AR1300 Sale: 22.30 Llega: 08.35</p>
                     <p>OUT: 19/09/2021 - AR1301 Sale: 21.00 Llega: 04.05</p>
