--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -147,7 +147,7 @@ min-width: 250px;
 }
 
 
-.form input, .form button, .formcart button, .mainProductDetail{
+.form input, .form button, .formcart button, .mainProductDetail, .button{
     width: 150%;
     min-width: 200px;
     max-width: 600px;
@@ -158,9 +158,13 @@ min-width: 250px;
     
 }
 
-.form button, .formcart button{
+.form button, .formcart button, .button{
     color:rgb(46, 45, 45);
     background-color:rgb(121, 205, 250)
+}
+
+.button{
+    width: 100%;
 }
 
 .flex-container {
@@ -211,14 +215,7 @@ footer section div p {
 .icono-footer {
     color: #1259c3;
     font-size: 2em;
-    padding-bottom: 1""0px;
-}
-
-.tituloEdicion {
-    padding: 10px;
-    font-family: 'Roboto';
-    text-align: center;
-    display: flex;
+    padding-bottom: 10px;
 }
 
 @media (min-width: 361px) {
