--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,17 +1,23 @@
 <nav class="navbar navbar-inverse">
+
     <div class="container-fluid">
-        <div><a href="/"><img src="/images/logoavion.png" alt="Logo Digital Travel" class="logo"></a></div>
-        <div class="navbar-header">
-            <a class="navbar-brand" href="/">Digital Travel</a>
+
+        <div class="title">
+            <!-- <a class="navbar-brand" href="/">Digital Travel</a> -->
+
+            <a href="/"><img src="/images/logoavion.png" alt="Logo Digital Travel" class="logo"></a>
+            <a href="/" class="title">Digital Travel</a>
         </div>
+
         <ul class="nav navbar-nav">
+
             <li><a href="#"><i class="fas fa-plane"></i> Aereos</a></li>
             <li><a href="#"><i class="fas fa-hotel"></i> Hoteles</a></li>
             <li><a href="#"><i class="fas fa-hiking"></i> Excursiones</a></li>
             <li><a href="#"><i class="fas fa-car"></i> Autos</a></li>
             <li><a href="#"><i class="fas fa-clinic-medical"></i> Asistencia</a></li>
             <li><a href="#"><i class="fas fa-search-dollar"></i> Ofertas</a></li>
-            <li><a href="/cart"><i class="fas fa-shopping-cart"></i></a></li>
+            <li><a href="/products/cart"><i class="fas fa-shopping-cart"></i></a></li>
             <li><a href="/login"><i class="fas fa-sign-in-alt"></i></a></li>
             <li><a href="/register"><i class="fas fa-user-plus"></i></i></a></li>
         </ul>
