--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -12,49 +12,48 @@
 <main>
 
     <body>
-        <div class="flex-container">
-            <section>
-                <img width=200px src="/images/maldivas.jpg" alt="Foto de las Maldivas">
+        <div class="products-list">
+            <article>
+                <section>
+                    <img class="imagenofertainicio" src="/images/products/<%= product.image %>" alt="Foto">
 
-            </section>
+                </section>
 
-            <section class="flex-container-2">
-                <div>
-                    <h2>
-                        Producto
-                    </h2>
-                </div>
-                <div class="textoProduct">El Sandy Heaven Maldives ofrece conexión WiFi gratuita y se encuentra en el
-                    atolón Malé Sur, a solo 30 minutos en lancha rápida del aeropuerto internacional de Velana. También
-                    cuenta con recepción 24 horas y restaurante. El hotel cuenta con una zona de playa privada.
-
-                    Las habitaciones del hotel Sandy heaven muestran las tradiciones de diseños arquitectónicos de las
-                    Maldivas. Todas las habitaciones del hotel están equipadas con TV de pantalla plana. Todas las
-                    habitaciones disponen de baño privado con artículos de aseo gratuitos, mientras que algunas ofrecen
-                    vistas a la ciudad.
-
-                    El Sandy Heaven Maldives sirve un desayuno continental. El hotel alberga el restaurante Fulhoi.
-                    También se ofrecen comidas privadas.
-
-                    El alojamiento se encuentra a 1,1 km de la ciudad de Malé y a 600 metros de Maafushi. El aeropuerto
-                    más cercano es el aeropuerto internacional de Malé, ubicado a 1,6 km del Sandy Heaven Maldives.
-
-                    A las parejas les encanta la ubicación — Le han puesto un 9,6 para viajes de dos personas.
-
-                </div>
-                <br>
-                <div>
-                    Fecha: 20/01/2022 - 01/02/2022
-                </div>
-                <br>
-                <div class="precioProduct">Precio final: 4000usd</div>
-                <br>
-                <div>
-                    <form action="/cart" method="POST" class="formregister">
-                        <button type="submit" class="button">Agregar al carrito</button>
-                    </form>
-                </div>
-            </section>
+                <section>
+                    <div>
+                        <h2>
+                            <%= product.name %>
+                                <% if (product.discount=="true" ) {%>
+                                    <img src="/images/sale.png" class="sale" alt="Foto">
+                                    <% }%>
+                        </h2>
+                    </div>
+                    <div>
+                        <%= product.description %>
+                    </div>
+                    <br>
+                    <div>
+                        Tipo de habitación: <%= product.room %>
+                    </div>
+                    <br>
+                    <div>
+                        Categoría de Hotel: <%= product.category %>
+                    </div>
+                    <br>
+                    <div>
+                        Ciudad: <%= product.city %>
+                    </div>
+                    <br>
+                    <div>Tarifa por noche: USD <%= product.price %>
+                    </div>
+                    <br>
+                    <div>
+                        <form action="/cart" method="POST" class="formregister">
+                            <button type="submit" class="button">Agregar al carrito</button>
+                        </form>
+                    </div>
+                </section>
+            </article>
         </div>
     </body>
 </main>
