--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <%- include ("../partials/head") %>
-    <title>Registrate - Digital Travel</title>
+        <title>Registrate - Digital Travel</title>
 </head>
 
 <body>
@@ -14,10 +14,9 @@
         <section>
             <form action="/" method="POST" class="form">
                 <h3>Registrate</h3>
-                <input type="text" name="name" required placeholder="Nombre y Apellido">
-                <input type="text" name="passport" required placeholder="Número de Pasaporte">
-                <input type="email" name="email" required placeholder="Correo Electrónico">
-                <input type="text" name="username" required placeholder="Nombre de Usuario">
+                <input type="text" name="fisrtName" required placeholder="Nombre">
+                <input type="text" name="lastName" required placeholder="Apellido">
+                <input type="email" name="email" required placeholder="E-mail">
                 <input type="password" name="password" required placeholder="Contraseña">
                 <input type="password" name="repassword" required placeholder="Confirmar Contraseña">
                 <button type="submit">Enviar</button>
