create y delete product

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -25,7 +25,7 @@
                 </form>
             </section>
 
-            <div class="container">
+            <div class="container" style="padding: 20px;">
                 <div id="myCarousel" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <% for (let i=0; i < discountProducts.length; i++ ) { %>
