--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -11,11 +11,13 @@
 
         <ul class="nav navbar-nav">
 
-            <li><a href="#"><i class="fas fa-plane"></i> Aereos</a></li>
-            <li><a href="#"><i class="fas fa-hotel"></i> Hoteles</a></li>
-            <li><a href="#"><i class="fas fa-hiking"></i> Excursiones</a></li>
-            <li><a href="#"><i class="fas fa-car"></i> Autos</a></li>
-            <li><a href="#"><i class="fas fa-clinic-medical"></i> Asistencia</a></li>
+            <li><a href="#"><i class="fas fa-plane"></i> New York</a></li>
+            <li><a href="#"><i class="fas fa-hotel"></i> Paris</a></li>
+            <li><a href="#"><i class="fas fa-hiking"></i> Buenos Aires</a></li>
+            <li><a href="#"><i class="fas fa-car"></i> Roma</a></li>
+            <li><a href="#"><i class="fas fa-clinic-medical"></i> Londres</a></li>
+            <li><a href="#"><i class="fas fa-clinic-medical"></i> Bangkok</a></li>
+            <li><a href="#"><i class="fas fa-clinic-medical"></i> Cancun</a></li>
             <li><a href="#"><i class="fas fa-search-dollar"></i> Ofertas</a></li>
             <li><a href="/products/cart"><i class="fas fa-shopping-cart"></i></a></li>
             <li><a href="/login"><i class="fas fa-sign-in-alt"></i></a></li>
