--- a/src/views/products/products.ejs
+++ b/src/views/products/products.ejs
@@ -53,7 +53,7 @@
                             <form action="/products/delete/<%= products[i].id %>" method="POST">
                                 <button type="submit" class="button">Eliminar</button>
                             </form>
-                            <form action="/products/edit/<%= products[i].id %>" method="POST">
+                            <form action="/products/edit/<%= products[i].id %>" method="GET">
                                 <button type="submit" class="button">Editar</button>
                             </form>
 
