--- a/src/views/users/register copy.ejs
+++ b/src/views/users/register copy.ejs
@@ -12,15 +12,14 @@
     </header>
     <main>
         <section>
-            <form action="/register" method="POST" enctype="multipart/form-data" class="form">
+            <form action="/" method="POST" class="form">
                 <h3>Registrate</h3>
-                <input type="text" name="firstName" required placeholder="Nombre">
+                <input type="text" name="fisrtName" required placeholder="Nombre">
                 <input type="text" name="lastName" required placeholder="Apellido">
                 <input type="email" name="email" required placeholder="E-mail">
                 <input type="password" name="password" required placeholder="Contraseña">
                 <input type="password" name="repassword" required placeholder="Confirmar Contraseña">
-                <input type="file" name="image" accept=".jpg" required placeholder="Imagen de perfil">
-                <button type="submit">Registrarse</button>
+                <button type="submit">Enviar</button>
                 <button type="reset">Borrar</button>
             </form>
         </section>
