login completo - validacion credenciales - recordar usuarios

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -19,9 +19,20 @@
             <li><a href="#"><i class="fas fa-clinic-medical"></i> Bangkok</a></li>
             <li><a href="#"><i class="fas fa-clinic-medical"></i> Cancun</a></li>
             <li><a href="#"><i class="fas fa-search-dollar"></i> Ofertas</a></li>
-            <li><a href="/products/cart"><i class="fas fa-shopping-cart"></i></a></li>
-            <li><a href="/login"><i class="fas fa-sign-in-alt"></i></a></li>
-            <li><a href="/register"><i class="fas fa-user-plus"></i></i></a></li>
+            <% if (locals.isLogged) { %>
+                <li><a href="/profile"><img src="/images/users/<%= locals.userLogged.image %> " alt="Imagen de usuario"
+                            style="width: 4vw; border-radius: 100%;">
+                        <%= locals.userLogged.firstName %>
+                    </a>
+                </li>
+                <li><a href="/products/cart"><i class="fas fa-shopping-cart"></i></a></li>
+                <li><a href="/logout"><i class="fas fa-sign-out-alt"></i></a></li>
+                <% }else{ %>
+                    <li><a href="/login"><i class="fas fa-sign-in-alt"></i></a></li>
+                    <li><a href="/register"><i class="fas fa-user-plus"></i></a></li>
+                    <% } %>
+
+
         </ul>
     </div>
 </nav>
